--- a/springmvc-study/form/src/main/webapp/index.html
+++ b/springmvc-study/form/src/main/webapp/index.html
@@ -10,7 +10,7 @@
             left: 50%;
             top: 50%;
             width: 400px;
-            height: 300px;
+            height: 600px;
             margin-left: -200px;
             margin-top: -150px;
             box-sizing: border-box;
@@ -47,6 +47,17 @@
             <input type="checkbox" name="purpose" value="3">兴趣爱好
             <input type="checkbox" name="purpose" value="4">其他
         </div>
+
+
+        <!-- 收货地址 -->
+        <h3>收货人</h3>
+        <input name="name" class="text" style="width: 150px">
+        <h3>联系电话</h3>
+        <input name="mobile" class="text" style="width: 150px">
+        <h3>收货地址</h3>
+        <input name="address" class="text" style="width: 150px">
+
+
         <div style="text-align: center;padding-top:10px">
             <input type="submit" value="提交" style="width:100px">
         </div>
