关联对象, 无法取到?todo

--- a/springmvc-study/form/src/main/webapp/index.html
+++ b/springmvc-study/form/src/main/webapp/index.html
@@ -50,12 +50,13 @@
 
 
         <!-- 收货地址 -->
+        <!-- 增加前缀, 这里前缀的名字就是Form表单中的对象名称 -->
         <h3>收货人</h3>
-        <input name="name" class="text" style="width: 150px">
+        <input name="delivery.name" class="text" style="width: 150px">
         <h3>联系电话</h3>
-        <input name="mobile" class="text" style="width: 150px">
+        <input name="d.mobile" class="text" style="width: 150px">
         <h3>收货地址</h3>
-        <input name="address" class="text" style="width: 150px">
+        <input name="d.address" class="text" style="width: 150px">
 
 
         <div style="text-align: center;padding-top:10px">
